# fluid_simulation

./: .gitignore  Cargo.toml
src/: camera.rs  compute.wgsl  framework.rs  lighting.rs  main.rs  mesh.rs  render.wgsl  simulation.rs  texture.rs
src/mesh/: shapes.rs
src/simulation/: mesh.rs  shapes.rs
