[package]
name = "fluid_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = { version = "0.18.0", features = ["swizzle"] }
egui = { version = "0.21.0", features = ["extra_debug_asserts", "persistence"] }
egui-wgpu = "0.21.0"
egui-winit = "0.21.1"
env_logger = "0.10.0"
log = "0.4.17"
nanorand = { version = "0.7.0", features = ["wyrand"] }
pollster = "0.3.0"
rayon = "1.7.0"
wgpu = "0.15.1"
winit = "0.28.2"
